# earthly

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mkdocs.yml  pyproject.toml  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: tests-e2e.yml  tests.yml  wheel-test.yml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/LICENSE/: index.html
0.3.0/change-log/: index.html
0.3.0/examples/agriculture_crop_water/: index.html
0.3.0/examples/atmosphere_pressure_levels/: index.html
0.3.0/examples/authentication/: index.html
0.3.0/examples/catalog/: index.html
0.3.0/examples/cds_quickstart/: index.html
0.3.0/examples/climate_change_anomalies/: index.html
0.3.0/examples/data-sources/: index.html
0.3.0/examples/drought_precipitation_deficit/: index.html
0.3.0/examples/heat_waves_public_health/: index.html
0.3.0/examples/hydrology_water_balance/: index.html
0.3.0/examples/oceanography_sst_sea_ice/: index.html
0.3.0/examples/snow_cryosphere_winter/: index.html
0.3.0/examples/solar_resource_assessment/: index.html
0.3.0/examples/wind_energy_resource/: index.html
0.3.0/installation/: index.html
0.3.0/overview/architecture/: index.html
0.3.0/reference/abstract-datasource/: index.html
0.3.0/reference/aggregation/: index.html
0.3.0/reference/chirps/: index.html
0.3.0/reference/earthly/: index.html
0.3.0/reference/ecmwf/: index.html
0.3.0/reference/gee/: index.html
0.3.0/reference/s3/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/LICENSE/: index.html
0.4.0/change-log/: index.html
0.4.0/examples/agriculture_crop_water/: index.html
0.4.0/examples/atmosphere_pressure_levels/: index.html
0.4.0/installation/: index.html
0.4.0/search/: search_index.json
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/LICENSE/: index.html
0.5.0/change-log/: index.html
0.5.0/installation/: index.html
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/LICENSE/: index.html
develop/change-log/: index.html
develop/installation/: index.html
develop/search/: search_index.json
docs/: authentication.md  catalog.md  change-log.md  index.md  installation.md  post-processing.md
docs/examples/: agriculture_crop_water.ipynb  atmosphere_pressure_levels.ipynb  authentication.md  catalog.md  cds_quickstart.ipynb  climate_change_anomalies.ipynb  data-sources.md  drought_precipitation_deficit.ipynb  heat_waves_public_health.ipynb  hydrology_water_balance.ipynb  oceanography_sst_sea_ice.ipynb  post-processing.md  snow_cryosphere_winter.ipynb  solar_resource_assessment.ipynb  wind_energy_resource.ipynb
docs/overview/: architecture.md
docs/reference/: abstract-datasource.md  abstractdatasource.md  aggregation.md  chc.md  chirps.md  earth2observe.md  earthlens.md  earthly.md  ecmwf.md  gee.md  s3.md
examples/: ERA5.py  abstract_implementation.py  chirps_data.py  download_satellite_data.ipynb  ecmwf_data.py  gee_data.py  post-processing-tutorial.ipynb  post_process_ecmwf_netcdf.py  s3_er5_data.py
main/: 404.html  index.html  objects.inv  sitemap.xml
main/LICENSE/: index.html
main/change-log/: index.html
main/installation/: index.html
main/search/: search_index.json
planning/cdsapi/: migration-plan.md  pr-diff-review.md
src/earth2observe/: __init__.py  abstractdatasource.py  cds_data_catalog.yaml  chirps.py  earth2observe.py  ecmwf.py  s3.py
src/earthlens/: __init__.py  aggregate.py  earthlens.py  spatial.py  utm.py
src/earthly/: __init__.py  aggregate.py  earthly.py
tests/: conftest.py  test_aggregate.py  test_chc.py  test_chirps.py  test_earth2observe.py  test_earthlens.py  test_earthly.py  test_ecmwf.py  test_s3.py  test_spatial.py  test_utm.py
tests/ecmwf/: _fakes.py  conftest.py  test_api.py  test_catalog.py  test_download.py  test_e2e.py  test_harness.py  test_initialize.py  test_parent_class.py  test_post_download.py
tests/gee/: conftest.py  test_auth.py  test_backend.py  test_backend_e2e.py  test_catalog.py  test_cloud_masks.py  test_data.py  test_earthlens_gee.py  test_features.py  test_filters.py  test_helpers.py  test_init.py  test_io.py  test_jobs.py  test_sampling.py
tests/test_base/: test_leaves.py  test_providers.py  test_spatial.py  test_yaml_loader.py
tests/test_chc_catalog/: test_cache.py  test_clip_to_bbox.py  test_describe.py  test_formats.py  test_ftp_connection_reuse.py  test_get_variable.py  test_health.py  test_list_datasets.py  test_model_post_init_super.py  test_normalize_variables.py  test_pandas_freq.py  test_per_date_resilience.py  test_placeholders_period_window.py  test_primary_spatial_resolution.py  test_provider.py  test_regions.py  test_spatial_resolution.py  test_temporal_resolution.py  test_unsigned_nodata_guard.py  test_variable_drift.py  test_yaml_comments.py
tests/test_ecmwf/: _fakes.py  conftest.py  test_api.py  test_catalog.py  test_constraints.py  test_download.py  test_download_aggregate.py  test_e2e.py  test_harness.py  test_initialize.py  test_parent_class.py  test_post_download.py  test_unwrap_zipped_netcdf.py
tools/: _gee_stac.py  _strip_test_scenarios.py  audit_cds_datasets.py  audit_gee_datasets.py  bulk_add_remaining.py  bulk_apply.py  bulk_inject.py  demo_pyramids_subdataset_bug.py  download_probe_results.py  probe_cds_netcdf.py  probe_open_datasets.py  refresh_available_datasets.py  refresh_gee_catalog.py  strip_notebook_volatility.py
tools/chc/: audit_chc_datasets.py  probe_chirps_gefs.py  refresh_chc_catalog.py
tools/docs/: run_notebook.py
tools/ecmwf/: audit_cds_datasets.py  bulk_inject.py  download_probe_results.py  probe_cds_netcdf.py  probe_open_datasets.py  refresh_available_datasets.py
tools/gee/: _catalog_io.py  _compact_stanzas.py  _gee_stac.py  _hydrate_placeholders.py  _migrate_source.py  _migrate_terms_to_license.py  _minimal_stanza.py  _normalise_providers.py  _recategorize_catalog.py  _run_batch.py  _split_catalog_by_provider.py  _strip_band_stubs.py  audit_gee_datasets.py  refresh_gee_catalog.py
(+460 files in other folders)
