[project]
name = "earth2observe"
version = "0.2.2"
description = "remote sensing package"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Mostafa Farrag", email = "moah.farag@gmail.com" }
]
license = {text = "GNU General Public License v3"}
keywords = ["remote sensing", "ecmwf"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">= 3.11, <4"

dependencies = [
    "boto3 >=1.26.50",
    "earthengine-api >=0.1.324",
    "ecmwf-api-client >=1.6.3",
    "joblib >=1.2.0",
    "loguru >=0.7.2",
    "netCDF4 >=1.6.1",
    "numpy >=2.1.3",
    "pandas >=2.2.3",
    "PyYAML >=6.0.2",
    "requests >=2.28.1",
    "serapeum_utils >=0.1.1",
]

[project.optional-dependencies]
dev = [
    "black >=24.4.2",
    "darglint >=1.8.1",
    "flake8-bandit >=4.1.1",
    "flake8-bugbear >=24.4.26",
    "flake8-docstrings >=1.7.0",
    "flake8-rst-docstrings >=0.3.0",
    "pep8-naming >=0.14.1",
    "pre-commit >=3.7.1",
    "pre-commit-hooks >=4.6.0",
    "reorder-python-imports >=3.13.0",
    "flake8-pyproject >=1.2.3"
]

test = [
    "pytest >= 8.2.2",
    "pytest-cov >= 5.0.0",
    "nbval >= 0.11.0",
    "coverage"
]


[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["earth2observe", "earth2observe.*"]


[tool.setuptools.package-data]
earth2observe = ["*.yaml"]


[tool.pip.index-url]
url = "https://girder.github.io/large_image_wheels"

[project.urls]
homepage = "https://github.com/Serapieum-of-alex/earth2observe"
repository = "https://github.com/Serapieum-of-alex/earth2observe"
documentation = "https://earth2observe.readthedocs.io/"
Changelog = "https://github.com/Serapieum-of-alex/earth2observe/HISTORY.rst"

[tool.flake8]
ignore = "E203, E266, E501, W503, E722, C901, E741, E731"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"


[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow.",
    "fast: mark test as fast.",
]


[build-system]
requires = [
    "setuptools>=61",
    "wheel",
#    "tomli>=1.1.0",
]
build-backend = "setuptools.build_meta"
