[project]
name = "earth2observe"
version = "0.2.2"
description = "remote sensing package"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Mostafa Farrag", email = "moah.farag@gmail.com" }
]
license = {text = "GNU General Public License v3"}
keywords = ["remote sensing", "ecmwf"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">= 3.11, <4"

dependencies = [
    "boto3 >=1.26.50",
    "earthengine-api >=0.1.324",
    "ecmwf-api-client >=1.6.3",
    "joblib >=1.2.0",
    "loguru >=0.7.2",
    "netCDF4 >=1.6.1",
    "numpy >=2.1.3",
    "pandas >=2.2.3",
    "pathlib >=1.0.1",
    "pip >=24.3.1",
    "pyramids-gis >=0.7.1",
    "PyYAML >=6.0.2",
    "requests >=2.28.1",
    "serapeum_utils >=0.1.1",
]

[dependency-groups]
dev = [
    "nbval >=0.11.0",
    "pre-commit >=3.7.1",
    "pre-commit-hooks >=4.6.0",
    "pytest >=8.2.2",
    "pytest-cov >=5.0.0",
    "coverage",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pip",
    "jupyterlab",
    "notebook",
    "jupyter",
    "commitizen>=4.8.4",
]
docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "mkdocs-panzoom-plugin",
]


[project.urls]
homepage = "https://github.com/serapeum-org/earth2observe"
repository = "https://github.com/serapeum-org/earth2observe"
documentation = "https://serapeum-org.github.io/earth2observe/"
Changelog = "https://github.com/serapeum-org/earth2observe/blob/main/docs/change-log.md"

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["earth2observe", "earth2observe.*"]

[tool.setuptools.package-data]
earth2observe = ["*.yaml"]

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "E722", "C901", "E741", "E731"]
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests", "examples", "docs"]
skips = ["B101"]

[tool.coverage.run]
branch = true
source = ["src/earth2observe"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: mark test as slow.",
    "fast: mark test as fast.",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
earth2observe = { path = ".", editable = true }

[tool.pixi.tasks]
test-all = { cmd = "pytest -vvv --cov=src/earth2observe -sv --cov-report=xml --cov-report=term-missing", description = "Run all testsuite" }
notebooks = { cmd = "pytest --nbval --nbval-lax --verbose examples/notebooks", description = "check notebooks" }
jupyter = { cmd = "jupyter lab --no-browser --IdentityProvider.token='' --ServerApp.password='' --port=8889", description = "check notebooks" }
build-dist = { cmd = "python -m build", description = "Build sdist and wheel for PyPI" }
publish-pypi = { cmd = "twine upload --non-interactive --repository pypi dist/*", depends-on = ["build-dist"], description = "Build and upload package to PyPI" }
cz-changelog = { cmd = "cz changelog", description = "Generate changelog using Commitizen" }
cz-bump = { cmd = "cz bump", description = "Bump version using Commitizen" }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs" }
py311 = { features = ["py311", "dev"], solve-group = "py311" }
py312 = { features = ["py312", "dev"], solve-group = "py312" }
py313 = { features = ["py313", "dev"], solve-group = "py313" }
py314 = { features = ["py314", "dev"], solve-group = "py314" }

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.dependencies]
pyramids = ">=0.12.0"
