[project]
name = "earthlens"
version = "0.5.0"
description = "remote sensing package"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Mostafa Farrag", email = "moah.farag@gmail.com" }
]
license = {text = "GNU General Public License v3"}
keywords = ["remote sensing", "ecmwf"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">= 3.11, <4"

dependencies = [
    # NOTE: the GEE backend uses Dataset.from_bytes / Dataset.from_archive,
    # currently only on the pyramids `feat/dataset-from-bytes` branch. Bump
    # this floor to the next pyramids release once those APIs ship.
    "pyramids-gis >=0.17.0",
    "joblib >=1.2.0",
    "loguru >=0.7.2",
    "numpy >=2.1.3",
    "pandas >=2.2.3",
    "PyYAML >=6.0.2",
    "pydantic >=2.0",
    "requests >=2.28.1",
    "tqdm >=4.66.0",
]

[project.optional-dependencies]
s3 = ["boto3 >=1.26.50"]
ecmwf = ["cdsapi >=0.7.7"]
gee = ["earthengine-api >=0.1.324"]
all = [
    "boto3 >=1.26.50",
    "cdsapi >=0.7.7",
    "earthengine-api >=0.1.324",
]

[dependency-groups]
dev = [
    "nbval >=0.11.0",
    "pre-commit >=3.7.1",
    "pre-commit-hooks >=4.6.0",
    "pytest >=8.2.2",
    "pytest-cov >=5.0.0",
    "coverage",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pip",
    "jupyterlab",
    "notebook",
    "jupyter",
    "commitizen>=4.8.4",
]
docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "mkdocs-panzoom-plugin",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "notebook<7.0",
]

notebook = [
    "pip",
    "jupyterlab",
    "notebook",
    "jupyter",
    "ipykernel"
]

[project.urls]
homepage = "https://github.com/serapeum-org/earthlens"
repository = "https://github.com/serapeum-org/earthlens"
documentation = "https://serapeum-org.github.io/earthlens/"
Changelog = "https://github.com/serapeum-org/earthlens/blob/main/docs/change-log.md"

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["earthlens", "earthlens.*"]

[tool.setuptools.package-data]
"earthlens.chc" = ["*.yaml"]
"earthlens.ecmwf" = ["*.yaml"]
"earthlens.gee" = ["*.yaml", "catalog/*.yaml"]

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "E722", "C901", "E741", "E731"]
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests", "examples", "docs"]
skips = ["B101"]

[tool.coverage.run]
branch = true
source = ["src/earthlens"]

[tool.coverage.report]
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "$version"
changelog_file = "docs/change-log.md"
update_changelog_on_bump = true
major_version_zero = true       # while < 1.0
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
    "slow: mark test as slow.",
    "fast: mark test as fast.",
    "unit: in-process unit test, no network or filesystem outside tmp_path.",
    "integration: exercises multiple modules together with mocked I/O.",
    "e2e: end-to-end test against a live external service (e.g. CDS); select with `-m e2e`.",
    "chc: tests for the Climate Hazards Center (CHC) FTP backend (no extra SDK; covers CHIRPS / CHIRP / CHIRTS / WBGT / SPI / SPEI / CHC_CMIP6 etc.).",
    "s3: tests for the S3 backend (requires the `s3` extra: boto3).",
    "ecmwf: tests for the ECMWF/CDS backend (requires the `ecmwf` extra: cdsapi).",
    "gee: tests for the Google Earth Engine backend (requires the `gee` extra: earthengine-api).",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
# Dev/test env pulls every backend's SDK so the full suite runs.
# Production users do `pip install earthlens[ecmwf]` (or whichever
# subset they need) per the [project.optional-dependencies] above.
earthlens = { path = ".", editable = true, extras = ["all"] }
# NOTE: the GEE backend uses Dataset.from_bytes / Dataset.from_archive,
# currently only on the pyramids `feat/dataset-from-bytes` branch. Until
# that ships in a pyramids release, overlay the branch on top of the
# conda-installed pyramids in this env with:
#   pixi run -e dev pip install --no-deps -e <path-to-pyramids-checkout>
# (--no-deps so pip does not try to rebuild GDAL on Windows). Once a
# pyramids release ships those APIs, bump the floor in [project.dependencies]
# to that release and drop this overlay step.

[tool.pixi.tasks]
test-all = { cmd = "pytest -vvv --cov=src/earthlens -sv --cov-report=xml --cov-report=term-missing", description = "Run all testsuite" }
test-no-e2e = { cmd = "pytest -vvv -m 'not e2e' --cov=src/earthlens -sv --cov-report=xml --cov-report=term-missing", description = "Run unit + integration suite (skips live e2e)" }
test-e2e = { cmd = "pytest -m e2e -v", description = "Run live CDS end-to-end suite (requires CDSAPI_URL / CDSAPI_KEY)" }
test-chc = { cmd = "pytest -vvv -m 'chc and not e2e' --cov=src/earthlens --cov-report=xml --cov-report=term-missing", description = "Run CHC-backend tests (CHIRPS / CHIRP / CHIRTS / WBGT / SPI / SPEI; skips live e2e)" }
test-s3 = { cmd = "pytest -vvv -m 's3 and not e2e' --cov=src/earthlens --cov-report=xml --cov-report=term-missing", description = "Run S3-backend tests (requires the `s3` extra: boto3)" }
test-ecmwf = { cmd = "pytest -vvv -m 'ecmwf and not e2e' --cov=src/earthlens --cov-report=xml --cov-report=term-missing", description = "Run ECMWF/CDS-backend tests (requires the `ecmwf` extra: cdsapi)" }
test-gee = { cmd = "pytest -vvv -m 'gee and not e2e' --cov=src/earthlens --cov-report=xml --cov-report=term-missing", description = "Run GEE-backend tests (requires the `gee` extra: earthengine-api)" }
test-doctests = { cmd = "pytest --doctest-modules src/earthlens/gee src/earthlens/chc src/earthlens/ecmwf src/earthlens/base", description = "Run docstring examples across the 4 backend packages (catches drift in catalog / API docstrings)" }
notebooks = { cmd = "pytest --nbval --nbval-lax --verbose examples/notebooks", description = "check notebooks" }
jupyter = { cmd = "jupyter lab --no-browser --IdentityProvider.token='' --ServerApp.password='' --port=8889", description = "check notebooks" }
build-dist = { cmd = "python -m build", description = "Build sdist and wheel for PyPI" }
publish-pypi = { cmd = "twine upload --non-interactive --repository pypi dist/*", depends-on = ["build-dist"], description = "Build and upload package to PyPI" }
cz-changelog = { cmd = "cz changelog", description = "Generate changelog using Commitizen" }
cz-bump = { cmd = "cz bump", description = "Bump version using Commitizen" }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs" }
py311 = { features = ["py311", "dev"], solve-group = "py311" }
py312 = { features = ["py312", "dev"], solve-group = "py312" }
py313 = { features = ["py313", "dev"], solve-group = "py313" }
py314 = { features = ["py314", "dev"], solve-group = "py314" }
notebook = { features = ["dev", "notebook"], solve-group = "default" }

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.dependencies]
pyramids = ">=0.17.0"
